--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+      <link rel="stylesheet" href="style.css">    
       <link rel="stylesheet" href="/static/css/index.css" />
       <!-- Bootstrap -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -23,9 +24,11 @@
   <body>
 
     <!-- Introduction -->
-    <h1 class="text-center">Learn Pharmacy</h1>
-    <p class="text-center"> Pharmacology flashcards that aren't boring </p>
-    <p class="text-center"> This is a cool site </p>
+    <div class = "text-center">
+      <h1>Learn Pharmacy</h1>
+      <p> Pharmacology flashcards that aren't boring </p>
+      <p> This is a cool site </p>
+    </div>
     <!-- End - Introduction -->
 
     <!-- 3D Perspective Carousel -->
@@ -62,70 +65,72 @@
     <!-- End Flip cards -->
 
     <!-- Autoplay carousel -->
-    <h1>CSS-only Carousel</h1>
+    <div class="autoplay-carousel">
+      <h1>CSS-only Carousel</h1>
 
-    <p>This carousel is created with HTML and CSS only.</p>
-    <section class="carousel" aria-label="Gallery">
-      <ol class="carousel__viewport">
-        <li id="carousel__slide1"
-            tabindex="0"
-            class="carousel__slide">
-          <div class="carousel__snapper">
-            <a href="#carousel__slide4"
-              class="carousel__prev">Go to last slide</a>
-            <a href="#carousel__slide2"
-              class="carousel__next">Go to next slide</a>
-          </div>
-        </li>
-        <li id="carousel__slide2"
-            tabindex="0"
-            class="carousel__slide">
-          <div class="carousel__snapper"></div>
-          <a href="#carousel__slide1"
-            class="carousel__prev">Go to previous slide</a>
-          <a href="#carousel__slide3"
-            class="carousel__next">Go to next slide</a>
-        </li>
-        <li id="carousel__slide3"
-            tabindex="0"
-            class="carousel__slide">
-          <div class="carousel__snapper"></div>
-          <a href="#carousel__slide2"
-            class="carousel__prev">Go to previous slide</a>
-          <a href="#carousel__slide4"
-            class="carousel__next">Go to next slide</a>
-        </li>
-        <li id="carousel__slide4"
-            tabindex="0"
-            class="carousel__slide">
-          <div class="carousel__snapper"></div>
-          <a href="#carousel__slide3"
-            class="carousel__prev">Go to previous slide</a>
-          <a href="#carousel__slide1"
-            class="carousel__next">Go to first slide</a>
-        </li>
-      </ol>
-      <aside class="carousel__navigation">
-        <ol class="carousel__navigation-list">
-          <li class="carousel__navigation-item">
+      <p>This carousel is created with HTML and CSS only.</p>
+      <section class="carousel" aria-label="Gallery">
+        <ol class="carousel__viewport">
+          <li id="carousel__slide1"
+              tabindex="0"
+              class="carousel__slide">
+            <div class="carousel__snapper">
+              <a href="#carousel__slide4"
+                class="carousel__prev">Go to last slide</a>
+              <a href="#carousel__slide2"
+                class="carousel__next">Go to next slide</a>
+            </div>
+          </li>
+          <li id="carousel__slide2"
+              tabindex="0"
+              class="carousel__slide">
+            <div class="carousel__snapper"></div>
             <a href="#carousel__slide1"
-              class="carousel__navigation-button">Go to slide 1</a>
-          </li>
-          <li class="carousel__navigation-item">
-            <a href="#carousel__slide2"
-              class="carousel__navigation-button">Go to slide 2</a>
-          </li>
-          <li class="carousel__navigation-item">
+              class="carousel__prev">Go to previous slide</a>
             <a href="#carousel__slide3"
-              class="carousel__navigation-button">Go to slide 3</a>
+              class="carousel__next">Go to next slide</a>
           </li>
-          <li class="carousel__navigation-item">
+          <li id="carousel__slide3"
+              tabindex="0"
+              class="carousel__slide">
+            <div class="carousel__snapper"></div>
+            <a href="#carousel__slide2"
+              class="carousel__prev">Go to previous slide</a>
             <a href="#carousel__slide4"
-              class="carousel__navigation-button">Go to slide 4</a>
+              class="carousel__next">Go to next slide</a>
+          </li>
+          <li id="carousel__slide4"
+              tabindex="0"
+              class="carousel__slide">
+            <div class="carousel__snapper"></div>
+            <a href="#carousel__slide3"
+              class="carousel__prev">Go to previous slide</a>
+            <a href="#carousel__slide1"
+              class="carousel__next">Go to first slide</a>
           </li>
         </ol>
-      </aside>
-    </section>
-    <!-- End - Autoplay carousel -->
+        <aside class="carousel__navigation">
+          <ol class="carousel__navigation-list">
+            <li class="carousel__navigation-item">
+              <a href="#carousel__slide1"
+                class="carousel__navigation-button">Go to slide 1</a>
+            </li>
+            <li class="carousel__navigation-item">
+              <a href="#carousel__slide2"
+                class="carousel__navigation-button">Go to slide 2</a>
+            </li>
+            <li class="carousel__navigation-item">
+              <a href="#carousel__slide3"
+                class="carousel__navigation-button">Go to slide 3</a>
+            </li>
+            <li class="carousel__navigation-item">
+              <a href="#carousel__slide4"
+                class="carousel__navigation-button">Go to slide 4</a>
+            </li>
+          </ol>
+        </aside>
+      </section>
+    </div>
+      <!-- End - Autoplay carousel -->
   </body>
 </html>
