--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
         
       <!-- Introduction -->
       <div class = "text-center" id="introduction-text">
-        <h1 id="top-heading">Know More Medicine</h1>
+        <h1 id="top-heading">Know Medicine</h1>
         <p>Simply beautiful flashcards to learn all you need (and want) to know about drugs</p>
         <button class="all-cards-button">See All Cards</button>
       </div>
@@ -44,11 +44,11 @@
         <input type="radio" name="slider" id="s4">
         <input type="radio" name="slider" id="s5">
 
-        <label for="s1" id="slide1"><img src="https://i.pinimg.com/originals/2b/de/de/2bdede0647e3cdf75b44ea33723201d9.jpg" alt=""></label>
-        <label for="s2" id="slide2"><img src="https://images6.alphacoders.com/462/thumb-1920-462371.jpg" alt=""></label>
-        <label for="s3" id="slide3"><img src="https://wallpaperaccess.com/full/1154341.jpg" alt=""></label>
-        <label for="s4" id="slide4"><img src="https://wallpapercave.com/wp/wp2634222.jpg" alt=""></label>
-        <label for="s5" id="slide5"><img src="https://images5.alphacoders.com/343/thumb-1920-343645.jpg" alt=""></label>
+        <label for="s1" id="slide1"><img src="/static/img/analgesics.png" alt="bloodglucose"></label>
+        <label for="s2" id="slide2"><img src="/static/img/bloodglucose.png" alt="analgesics"></label>
+        <label for="s3" id="slide3"><img src="/static/img/top100.png" alt="top100"></label>
+        <label for="s4" id="slide4"><img src="/static/img/antidepressants.png" alt="antibiotics"></label>
+        <label for="s5" id="slide5"><img src="/static/img/antibiotics.png" alt="antidepressants"></label>
       </section>
       <!-- End - 3D Perspective Carousel -->
     </div> 
