Add top 100 html page

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
         <input type="radio" name="slider" id="s4">
         <input type="radio" name="slider" id="s5">
 
+        <!-- Reference for therapeutic classes: https://www.fda.gov/regulatory-information/fdaaa-implementation-chart/usp-therapeutic-categories-model-guidelines -->
         <label for="s1" id="slide1"><img src="/static/img/analgesics.png" alt="bloodglucose"></label>
         <label for="s2" id="slide2"><img src="/static/img/bloodglucose.png" alt="analgesics"></label>
         <label for="s3" id="slide3"><img src="/static/img/top100.png" alt="top100"></label>
