Adding notes for bootstrap hamburger menu

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
       <link rel="stylesheet" href="/static/css/index.css" />
       <!-- Bootstrap-->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <!-- Bootstrap - this is needed for hamburger menu to work on mobile -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
       <!-- Google fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -56,6 +57,7 @@
       </section>
       <!-- End - 3D Perspective Carousel -->
     </div> 
+    <!-- Min js needed for hamburger menu to work on mobile -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
