styling the description text for cards

--- a/src/top100.html
+++ b/src/top100.html
@@ -28,12 +28,13 @@
       <div class="container h-100 d-flex align-items-center justify-content-center" id="top-100-cards">
         <div class="row">
             <div class="col">
-                <div id="top-100-text">
-                    <h1 id="top-heading">Know Medicine</h1>
-                    <p>Simply beautiful flashcards to learn all you 
-                        need (and want) to know about drugs
-                    </p>
-                    <button class="all-cards-button">See All Cards</button>
+                <div>
+                  <p id="deck-subheading">Brand & Generic</p>
+                  <h1 id="deck-heading">Top 100</h1>
+                  <p id="deck-description">Medications on the Top 100 list are prescribed often
+                    and have a well-known reputation for their efficacy and safety.
+                  </p>
+                  <button class="all-cards-button">See All Cards</button>
                 </div>          
             </div>
             <div class="col">
