Styling the cards

--- a/src/top100.html
+++ b/src/top100.html
@@ -41,8 +41,7 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="https://via.placeholder.com/300" 
-                        alt="Avatar" style="width:350px;height:350px;">
+                        <h1 id="front-card-text">hello</h1>
                     </div>
                     <div class="flip-card-back">
                         <h1>Content Header</h1> 
