designing the card

--- a/src/top100.html
+++ b/src/top100.html
@@ -41,12 +41,11 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <h1 id="front-card-text">hello</h1>
+                        <h1 id="front-card-text">Hello</h1>
+                        <img src="static/img/Background.png" style="width:350px;height:350px;">
                     </div>
                     <div class="flip-card-back">
-                        <h1>Content Header</h1> 
-                        <p>Content Part I</p> 
-                        <p>Content Part II</p>
+                        <h3 id="back-card-text">Content Header</h3> 
                     </div>
                     </div>
                 </div>
