To make cards not scroll automatically

--- a/src/top100.html
+++ b/src/top100.html
@@ -39,7 +39,7 @@
             </p>
             <button class="all-cards-button">See All Cards</button>
           </div>
-          <div class="col carousel slide" id="myCarousel">
+          <div class="col carousel slide data-interval=false" id="myCarousel">
           <!-- <div class="flip-card">
               <div class="flip-card-inner">
               <div class="flip-card-front">
